--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
 .dark-2{
     color: #727272;
 }
+.primary-color{
+    color: #ff900e;
+}
 .primary-btn{
     background-color: #ff900e;
     color: white;
@@ -93,6 +96,42 @@ header{
 .hero-btn{
     margin: 20px 0px;
 }
+/* our-teams section start here */
+.our-teams-section{
+    margin: 60px 120px;
+}
+.our-teams-container{
+    gap: 30px;
+    align-items: center;
+    padding: 30px;
+}
+.our-teams-content{
+    max-width: 420px;
+}
+.our-teams-title{
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.our-teams-title .quick-list{
+    font-weight: 600;
+}
+.our-teams-images{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+}
+.our-teams-image{
+    max-width: 340px;
+    max-height: 340px;
+}
+.our-teams-image img{
+    width: 100%;
+    height: 100%;
+}
+.our-teams-btn{
+    margin: 20px 0px;
+}
 
 /* responsive design for mobile phone */
 @media screen and (max-width:576px) {
@@ -108,6 +147,14 @@ header{
     }
     .hero-content .hero-title{
         font-size: 35px;
+    }
+    /* our-teams section start here */
+    .our-teams-section{
+       margin: 20px 10px;
+    }
+    .our-teams-container{
+       flex-direction: column;
+       padding: 20px;
     }
 }
 /* responsive design for medium or tablet device  */
@@ -125,5 +172,13 @@ header{
     .hero-content .hero-title{
         font-size: 55px;
     }
+    /* our-teams section start here */
+    .our-teams-section{
+        margin: 20px 50px;
+     }
+     .our-teams-container{
+        flex-direction: column;
+        padding: 30px;
+     }
     
 }
